--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jeongsangtae/100day-challenge-milestone-project-online-store#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongodb": "^5.0.1"
